# drf-app

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: mixins.py  urls.py  views.py
app/books/: urls.py  views.py
app/books/tests/: test_views.py
